--- a/mabib.bib
+++ b/mabib.bib
@@ -1,16 +1,59 @@
 @phdthesis{Mezzarobba2011,
-  author = {Marc Mezzarobba},
-  month = nov,
-  school = {École polytechnique},
-  title = {Autour de l'évaluation numérique des fonctions {D}-finies},
-  type = {Thèse de doctorat},
-  url = {http://tel.archives-ouvertes.fr/pastel-00663017/},
-  year = {2011}
+	author = {Marc Mezzarobba},
+	month = nov,
+	school = {École polytechnique},
+	title = {Autour de l'évaluation numérique des fonctions {D}-finies},
+	type = {Thèse de doctorat},
+	url = {http://tel.archives-ouvertes.fr/pastel-00663017/},
+	year = {2011}
 }
-@article{mezzarobba2019truncation,
-	title={Truncation bounds for differentially finite series},
-	author={Mezzarobba, Marc},
-	year={2019}
+@article{Mezzarobba2019,
+	author = {Marc Mezzarobba},
+	doi = {10.5802/ahl.17},
+	journal = {Annales Henri Lebesgue},
+	pages = {99–148},
+	publisher = {ÉNS Rennes},
+	title = {Truncation Bounds for Differentially Finite Series},
+	url = {https://ahl.centre-mersenne.org/item/AHL_2019__2__99_0},
+	volume = {2},
+	year = {2019}
+}
+@article{giusti2019approximation,
+	title={Approximation num{\'e}rique de racines isol{\'e}es multiples de syst{\`e}mes analytiques},
+	author={Giusti, Marc and Yakoubsohn, Jean-Claude},
+	year={2019},
+	url={https://perso.math.univ-toulouse.fr/yak/files/2018/09/Giusti-Yakoubsohn-2018-09-08.pdf}
+}
+@book{hille1997ordinary,
+	title={Ordinary differential equations in the complex domain},
+	author={Hille, Einar},
+	year={1997},
+	publisher={Courier Corporation}
+}
+@article{henrici1969uniformly,
+	title={Uniformly convergent algorithms for the simultaneous approximation of all zeros of a polynomial},
+	author={Henrici, Peter and Gargantini, Irene},
+	journal={Constructive Aspects of the Fundamental Theorem of Algebra},
+	pages={77--113},
+	year={1969},
+	publisher={Wiley-Interscience New York}
+}
+@article{serov2015complex,
+	title={Complex Analysis},
+	author={Serov, VS},
+	journal={University of Oulu, Oulu},
+	year={2015},
+	url={https://www.oulu.fi/sites/default/files/151/complex_book.pdf}
+}
+@article{weyl1924randbemerkungen,
+	title={Randbemerkungen zu hauptproblemen der mathematik},
+	author={Weyl, Hermann},
+	journal={Mathematische Zeitschrift},
+	volume={20},
+	number={1},
+	pages={131--150},
+	year={1924},
+	publisher={Springer}
 }
 @article{MezzarobbaSalvy2010,
 	author = {Marc Mezzarobba and Bruno Salvy},
@@ -56,6 +99,39 @@
 	volume={7},
 	year={1885},
 	pages={203--258} }
+
+@article{van2001fast,
+	title={Fast evaluation of holonomic functions near and in regular singularities},
+	author={van der Hoeven, Joris},
+	journal={Journal of Symbolic Computation},
+	volume={31},
+	number={6},
+	pages={717--744},
+	year={2001},
+	publisher={Academic Press}
+}
+@book{abramowitz1948handbook,
+	title={Handbook of mathematical functions with formulas, graphs, and mathematical tables},
+	author={Abramowitz, Milton and Stegun, Irene A},
+	volume={55},
+	year={1948},
+	publisher={US Government printing office}
+}
+
+@Book{aecf-2017-livre,
+	title     = {Algorithmes Efficaces en Calcul Formel},
+	publisher = {Frédéric Chyzak (auto-édit.)},
+	year      = {2017},
+	author    = {Bostan, Alin and Chyzak, Frédéric and Giusti, Marc and Lebreton, Romain and Lecerf, Grégoire and Salvy, Bruno and Schost, Éric},
+	address   = {Palaiseau},
+	month     = sep,
+	isbn      = {979-10-699-0947-2},
+	note      = {686 pages. Imprimé par CreateSpace. Aussi disponible en version électronique},
+	langid    = {french},
+	language  = {french},
+	url       = {https://hal.archives-ouvertes.fr/AECF/},
+}
+
 
 @article{stanley1980differentiably,
 	title={Differentiably finite power series},
